<resources>
    <string name="app_name">project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open blank fragment</string>
    <string name="stop">stop blank fragment</string>

    <string name="krishi_care">Krishi Care</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="we_will_send_you_an_one_time_otpon_this_given_mobile_number">We will send you an one time otp on this given mobile\nnumber</string>
    <string name="mobile_number">Mobile number</string>
    <string name="_91">+91</string>
    <string name="didn_t_receive_otp_resend_otp_again">Didn\'t receive otp? <b>RESEND OTP AGAIN</b></string>
    <string name="star">*</string>
    <string name="verify">VERIFY</string>
    <string name="please_enter_the_otp_sent_to_you">Please enter the OTP sent to you</string>
    <string name="pests_and_disease_alert">Pests and \nDisease Alert</string>
    <string name="fertilizer_calculator">Fertilizer \nCalculator</string>
    <string name="pests_diseases"><![CDATA[Pests & Diseases]]></string>
    <string name="xyz1">All pests and diseases that might appear in your crop at</string>
    <string name="description">Plantix hasdetected a possible problem With my Bringel.I Was given a fiw possibilities.</string>

</resources>